# browser-platform

./: .dockerignore  .gitignore  Dockerfile  README.md  README.zh-CN.md  browserctl.sh  docker-compose.yaml  healthcheck.sh  nginx.conf  supervisord.conf
api/: Dockerfile  pyproject.toml
api/app/: __init__.py  config.py  docker_runtime.py  logging_setup.py  main.py  models.py  service.py  store.py
browser/: Dockerfile  browserctl.sh
