[project]
name = "browser-platform-api"
version = "0.1.0"
description = "Control plane for the cloud browser platform"
requires-python = ">=3.12"
dependencies = [
    "docker==7.1.0",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "prometheus-client==0.20.0",
    "python-json-logger==2.0.7",
    "pydantic-settings==2.5.2",
    "redis==5.0.8",
    "uvicorn[standard]==0.30.6",
    "websockets==13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
